Scrollbar issue fixed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,34 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+html {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+html::-webkit-scrollbar {
+  display: none;
+}
+
+body {
+  -ms-overflow-style: none;
+  overflow-x: hidden;
+}
+
+* {
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+  display: none;
+}
+
+::-webkit-scrollbar-thumb {
+  background: transparent;
+}
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
